适配Android6.0权限，适配Android7.0 FileProvider

--- a/multi-image-selector/src/main/res/values-zh/strings.xml
+++ b/multi-image-selector/src/main/res/values-zh/strings.xml
@@ -12,5 +12,6 @@
     <string name="mis_permission_dialog_ok">好</string>
     <string name="mis_permission_dialog_cancel">拒绝</string>
     <string name="mis_permission_rationale">浏览图片需要您提供浏览存储的权限</string>
+    <string name="mis_permission_rationale_camera">拍摄照片需要您提交摄像头权限</string>
     <string name="mis_permission_rationale_write_storage">保存拍照图片需要您提供写存储权限</string>
 </resources>
